--- a/index.html
+++ b/index.html
@@ -21,32 +21,9 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/features">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/features">Dashboard</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/features">Subscribtion</a>
-            </li>
         </ul>
-        <div class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Documentation
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/commands">Commands</a>
-                <a class="dropdown-item" href="/tutorials">Tutorials</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/server-settings">Server settings</a>
-            </div>
-        </div>
         <div class="nav-item">
             <a class="nav-link" href="/about">About</a>
-        </div>
-        <button class="btn login-btn btn-outline-accent my-2 my-sm-0" style="font-size: 10px !important;font-family: poppins !important;">LOGIN</button>
     </div>
 </nav>
 <div class="heading">
@@ -115,7 +92,7 @@
     </div>
     <div class="footer">
         <div class="bot-footer">
-            <img src="assets/BotLogoWord.svg" width="150"><br />
+            <img src="assets/BotLogo.svg" width="150"><br />
             Copyright © h7d48a - 2020
         </div><br/>
         <div class="nouridio"><p><small>design by <a href="https://twitter.com/Nouridio"> nouridio</a></small><p></div>
