--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
     </button>
     <img src="assets/BotLogo.svg" width="50" height="50">
     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="margin-left: 20px !important">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#/">Home <span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
     </div>
+    <div class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+        </div>
 </nav>
 <div class="heading">
     <h1 class="display-5 title">It's time to use Gigabit in your server.</h1>
