--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
     <div class="cards">
         <div class="card statistic" style="width: 18rem;">
             <div class="card-body">
-                <p class="card-title" style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;">hello</h1>
-                <p style="font-weight: bold !important;font-size: 20px !important;">goodbye</p>
+                <p class="card-title" style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;">About us</h1>
+                <p style="font-weight: bold !important;font-size: 20px !important;">Gigabit is a bot written by h7d48a with discord.py</p>
             </div>
 </body>
 </html>
