--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </li>
         </ul>
         <div class="nav-item">
-            <a class="nav-link" href="/about">About</a>
+            <a class="nav-link" href="/about.html">About</a>
         </div>
     </div>
 </nav>
