--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <img src="assets/BotLogo.svg" width="150"><br />
             Copyright © h7d48a - 2020
         </div><br/>
-        <div class="nouridio"><p><small>design nby <a href="https://twitter.com/Nouridio"> nouridio</a></small><p></div>
+        <div class="nouridio"><p><small>design by <a href="https://twitter.com/Nouridio"> nouridio</a></small><p></div>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
