--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <br /><br /><br /><br /><br /><br />
 </div>
 <div class="features">
-    <div class="title">Features of Bot</div>
-    <div class="subtitle">We provide you the best features in Bot!</div>
+    <div class="title">Features of Gigabit</div>
+    <div class="subtitle">We provide you the best features in Gigabit!</div>
     <div class="cards">
         <div class="card" style="width: 18rem;">
         <div class="card-body">
