--- a/index.html
+++ b/index.html
@@ -1,108 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+html {
+    background-color: #f6f6f6;
+    margin: 16px;
+}
+body {
+    color: #333;
+    font-family: "Open Sans", "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
+}
+ul {
+    padding-left: 1.2rem;
+}
+li { margin: 2px; }
+ul.topic {
+    margin-top: 0;
+    padding-left: 1.5rem;
+}
+ul.topic ul {
+    margin: 0.2em 0;
+}
+h1 {
+    font-size: 2.0rem;
+    margin: 0;
+}
+h2 {
+    color: #444;
+    font-size: 1.4rem;
+    margin: 1em 0 0.1em 0;
+}
+h3 {
+    color: #666;
+    font-size: 1.05rem;
+    margin: 1em 0 0.25em 0.5em;
+    font-weight: bold;
+}
+a {
+    color: #000;
+}
+article { display: block; }
+.release-date, .forum-link {
+    font-size: 0.9rem;
+    font-style: italic;
+    color: #666;
+}
+</style>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/now-ui-kit.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,800,900&display=swap" rel="stylesheet">
     <title>Gigabit</title>
 </head>
-<body>
-<nav class="navbar navbar-expand-lg bg-transparent">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <img src="assets/menuIcon.svg" width="20px" height="20px" style="max-width: none !important;">
-    </button>
-    <img src="assets/BotLogo.svg" width="50" height="50">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="margin-left: 20px !important">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#/">Home <span class="sr-only">(current)</span></a>
-            </li>
-        </ul>
-        <div class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
-        </div>
-    </div>
-</nav>
-<div class="heading">
-    <h1 class="display-5 title">It's time to use Gigabit in your server.</h1>
-    <p class="subtitle">Gigabit is a multi-purpose bot ready to skill up and boost up your Discord server<br />includes fetures such as Moderation, fun and *not too much* more!!</p>
-    <a class="btn btn-primary btn-lg" href="https://discord.com/oauth2/authorize?client_id=751352590528151582&scope=bot&permissions=8" target="_blank" role="button">Get started</a>
-    <a class="btn btn-secondary btn-lg" href="https://discord.com/oauth2/authorize?client_id=751352590528151582&scope=bot&permissions=8" target="_blank" role="button">Add to server</a>
-    <br /><br /><br /><br /><br /><br />
-</div>
-<div class="features">
-    <div class="title">Features of Gigabit</div>
-    <div class="subtitle">We provide you the best features in Gigabit!</div>
-    <div class="cards">
-        <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">1</h5>
-            <p class="card-text">Lots and lots and lots... of random gibberish</p>
-        </div>
-    </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">2</h5>
-                <p class="card-text">Lots and lots and lots... of random gibberish</p>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">3</h5>
-                <p class="card-text">Lots and lots and lots... of random gibberish</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="statistics">
-    <div class="cards">
-        <div class="card statistic" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-title" style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;">009</h1>
-                <p style="font-weight: bold !important;font-size: 20px !important;">servers</p>
-            </div>
-        </div>
-        <div class="card statistic" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-title" style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;">007</h1>
-                <p style="font-weight: bold !important;font-size: 20px !important;">users</p>
-            </div>
-        </div>
-        <div class="card statistic" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-title" style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;">a lot of</h1>
-                <p style="font-weight: bold !important;font-size: 20px !important;">channels</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="page_end">
-    <div class="start">
-        <div class="card">
-            <div class="card-body gs-card">
-                <div class="title">Ready to try Gigabit?</div>
-                <div class="subtitle">Invite Gigabit and start giving your server *totally* awsome perks!</div>
-                <br />
-                <a class="btn btn-primary btn-lg" href="https://discord.com/oauth2/authorize?client_id=751352590528151582&scope=bot&permissions=8" role="button">Get started</a>
-            </div><br />
-        </div>
-    </div>
-    <div class="footer">
-        <div class="bot-footer">
-            <img src="assets/BotLogo.svg" width="150"><br />
-            Copyright © h7d48a - 2020
-        </div><br/>
-        <div class="nouridio"><p><small>design by <a href="https://twitter.com/Nouridio"> nouridio</a></small><p></div>
-    </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="js/now-ui-kit.min.js"></script>
-</body>
-</html>
+
+<h1>Gigabit - The Discord Bot</h1>
+
+<h2>Yet Another General Purpose Discord Bot</h2>
