--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@ article { display: block; }
 
 <h1>Gigabit - The Discord Bot</h1>
 
-<h2>Yet Another General Purpose Discord Bot</h2>
+<h2><i>Yet Another General Purpose Discord Bot</i></h2>
 <h2></h2>
 <h2>
