--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@ article { display: block; }
     font-style: italic;
     color: #666;
 }
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
 </style>
 
 <head>
@@ -53,5 +65,4 @@ article { display: block; }
 <h1>Gigabit - The Discord Bot</h1>
 
 <h2><i>Yet Another General Purpose Discord Bot</i></h2>
-<h2></h2>
-<h2>
+<a href="https://discord.com/oauth2/authorize?client_id=751352590528151582&scope=bot&permissions=8" class="button">Invite</a>
