--- a/index.html
+++ b/index.html
@@ -56,13 +56,45 @@ article { display: block; }
   font-size: 16px;
 }
 
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
 </style>
 
 <head>
     <title>Gigabit</title>
 </head>
 
+<div class="topnav">
+  <a class="active" href="#">Home</a>
+  <a href="/documentation">Documentation</a>
+  <a href="/about">About</a>
+</div>
+<a href="#">Home</a></li>
+
 <h1>Gigabit - The Discord Bot</h1>
 
 <h2><i>Yet Another General Purpose Discord Bot</i></h2>
 <a href="https://discord.com/oauth2/authorize?client_id=751352590528151582&scope=bot&permissions=8" class="button">Invite</a>
+<a href="https://discord.com/oauth2/authorize?client_id=751352590528151582&scope=bot&permissions=8" class="button">IDiscord</a>
