--- a/index.html
+++ b/index.html
@@ -91,10 +91,9 @@ article { display: block; }
   <a href="/documentation">Documentation</a>
   <a href="/about">About</a>
 </div>
-<a href="#">Home</a></li>
 
 <h1>Gigabit - The Discord Bot</h1>
 
 <h2><i>Yet Another General Purpose Discord Bot</i></h2>
 <a href="https://discord.com/oauth2/authorize?client_id=751352590528151582&scope=bot&permissions=8" class="button">Invite</a>
-<a href="https://discord.com/oauth2/authorize?client_id=751352590528151582&scope=bot&permissions=8" class="button">IDiscord</a>
+<a href="https://discord.gg/rKxEGBE" class="button">Discord</a>
